[omnibox] Re-calculate bookmark suggestions each call

Bookmark matches' |allowed_to_be_default_match| depends on
|prevent_inline_autocomplete| being false. This field can be set and
copied before |prevent| is set. The bookmark provider was returning
cached results assuming |prevent| was still set. This CL changes the
bookmark provider to never cache, and always generate and return
fresh results.

Bug: 879905
Change-Id: I909364500417cd629cead52a6f430b6d488142b9
Reviewed-on: https://chromium-review.googlesource.com/1204270
Reviewed-by: Mark Pearson <mpearson@chromium.org>
Commit-Queue: Kevin Bailey <krb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589385}
Former-commit-id: 64a9d00b7cc27185a5a09f7a73d43466159be027